--- a/list-view/environment.yaml
+++ b/list-view/environment.yaml
@@ -40,7 +40,7 @@ dependencies:
     - py==1.7.0
     - pyinstaller==3.4
     - pyparsing==2.3.0
-    - pyside2==5.12.0
+    - PySide6==5.12.0
     - pytest==4.2.0
     - python-dateutil==2.7.5
     - requests==2.21.0
